tests/ui/dyn-compatibility/sized.dyn_compatible_for_dispatch.stderr
error[E0038]: the trait `Bar` is not dyn compatible
  --> $DIR/sized.rs:14:5
   |
LL |     t
   |     ^ `Bar` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/sized.rs:8:12
   |
LL | trait Bar: Sized {
   |       ---  ^^^^^ ...because it requires `Self: Sized`
   |       |
   |       this trait is not dyn compatible...
   = note: required for the cast from `&T` to `&dyn Bar`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0038`.
